Bug 116483 - FILEOPEN: MSO SmartArt incorrectly rendered
Summary: FILEOPEN: MSO SmartArt incorrectly rendered
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: filters and storage (show other bugs)
Version:
(earliest affected)
6.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.1.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-03-19 06:43 UTC by Luke
Modified: 2018-03-28 14:53 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Example SmartArt that shows the problem (78.20 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2018-03-19 16:54 UTC, Luke
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Luke 2018-03-19 06:43:39 UTC
Steps to reproduce:
1. With a recent build of LibreOffice, open a document with SmartArt. 
2. Compare to MSO / old build

Version: 6.1.0.0.alpha0+ Build ID: cab04bc39b5164ea74216cd849c3af5f5b298f79
TinderBox: Win-x86@42, Branch:master, Time: 2018-03-11_23:40:16
Good

Version: 6.1.0.0.alpha0+ Build ID: 5b87abe06da35ca3a11628674af23460349b439a
TinderBox: Win-x86@42, Branch:master, Time: 2018-03-12_23:45:38
Bad

I could reproduce this issue with both Windows and Linux
Comment 1 Timur 2018-03-19 12:09:26 UTC Comment hidden (obsolete)
Comment 2 Luke 2018-03-19 16:54:46 UTC
Created attachment 140718 [details]
Example SmartArt that shows the problem
Comment 3 Xisco Faulí 2018-03-19 21:42:14 UTC
Regression introduced by:

author	Caolán McNamara <caolanm@redhat.com>	2018-03-12 14:13:23 +0000
committer	Caolán McNamara <caolanm@redhat.com>	2018-03-12 22:07:45 +0100
commit 079a17447d869fae97c0b1a6dde5fe6a25247685 (patch)
tree 6adef153e7cbea4d0608e78e75e4861f1b40f99f
parent 02cf066ee9b8a833a6f19c41489aadff3561a56b (diff)
forcepoint #27 check region bands loaded from stream for consistency

Bisected with: bibisect-linux64-6.1

Adding Cc: to Caolán McNamara
Comment 4 Caolán McNamara 2018-03-20 11:25:52 UTC
the bPolygon case of true should be allowed to replace the missing/broken clip detected
Comment 5 Commit Notification 2018-03-20 13:02:17 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=dbae716d9fddc40459ea72374d6c14224668a138

Resolves: tdf#116483 smart art incorrectly rendered

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Xisco Faulí 2018-03-28 14:53:19 UTC
Verified in

Version: 6.1.0.0.alpha0+
Build ID: 8329f4541e27402d19729ae1588af8bfe61f7b49
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Thank you Caolán!