Resolves: tdf#116483 smart art incorrectly rendered

HasPolyPolygon as true case sets an alternative non-broken region even if its
legacy version would have been broken

Change-Id: I4520b7d7a4032684afad61816380fef7171040f6